--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,13 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_profile">Profile</string>
     <string name="placeholderinputname">Enter your name</string>
     <string name="placeholderincome">Income</string>
+    <string name="edit_profile">Edit profile</string>
+    <string name="name">Name</string>
+    <string name="income">Income</string>
+    <string name="logout">Logout</string>
+    <string name="user">User</string>
+    <string name="todo">TODO</string>
 </resources>
